site/sites/all/themes/sunrise/css/style.css
@import url(http://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,400,600,700,300&subset=latin,greek);

/* Reset unusual Firefox-on-Android default style, see https://github.com/necolas/normalize.css/issues/214*/
@media (max-width: 991px) { .form-text, .form-textarea, .block-superfish select { background-image: none; } }

* { -moz-box-sizing: border-box; -webkit-box-sizing: border-box; box-sizing: border-box; }
* { transition: all 0.3s ease-out; } 


body { color: #444; font-family: 'Open Sans', sans-serif; font-size: 14px; line-height: 160%; }

p { margin: 0 0 25px; padding: 0; }

a { -webkit-transition: all 0.3s ease-in-out; -moz-transition: all 0.3s ease-in-out; -ms-transition: all 0.3s ease-in-out; 
-o-transition: all 0.3s ease-in-out; transition: all 0.3s ease-in-out; }

a:hover { text-decoration: underline;  }

a:focus { outline: none; text-decoration: none; }

blockquote { margin: 40px 40px 24px; border-left: none; padding: 0; position: relative; color: #999; }

blockquote::before { content: "\201C"; display: block; font-size: 30px; left: -20px; top: 5px; position: absolute;  }

blockquote p { font-size: 14px; line-height: 160%; font-weight: 400; }

img { display: block; height: auto; max-width: 100%; }

#pre-header { color:#aaaaaa; }

#bottom-content { color: #ffffff; }

/* selections */
::-moz-selection { 
    background: rgb(255,255,158);
}

::selection { 
    background: rgb(255,255,158);
}

img::selection { 
    background: transparent;
}

img::-moz-selection	{ 
    background: transparent;
}

body {
    -webkit-tap-highlight-color: rgb(255,255,158);
}


/*Heading*/
h1, h2, h3, h4, h5, h6 { 
    font-weight: bold; 
    /*line-height: 120%; 
    padding: 0; 
    margin: 20px 0 10px 0; */
    
    margin-top: 0px;
    margin-bottom: 0px;
    
    font-family: 'Open Sans', sans-serif; 
    color:#666666;
}

h1 a, h2 a, h3 a, h4 a, h5 a, h6 a { color: #444; }

h1 { 
	font-size: 68px;
	line-height: 48px;
	letter-spacing: -1px;
}

h2 { 
	font-size: 42px;
	line-height: 1;
}

h3 { 
 	font-size: 26px;
	line-height: 36px;
}

h4 { 
	font-size: 22px;
	line-height: 30px;
}

h5 { font-size: 18px }

h6 { font-size: 16px }

.title-sep, #pre-header h2, .sidebar h2 { 
    clear: both; 
    margin-bottom: 20px; 
    position: relative;
    color: #666666;
    font-weight: bold;
	font-size: 14px;
	text-transform: uppercase;
    text-shadow: 1px 1px 1px #FFFFFF;
}

.title-sep .glyphicon { font-size: 13px; padding-right: 18px; }


/*tables*/
table { width: 100%; margin-bottom: 20px; border: 1px solid #dfdfdf; }

table tbody { border-top: none; }

table tr.even, table tr.odd, th { background-color: transparent; border-bottom: 1px solid #dfdfdf;}

thead tr th, thead tr td, tbody tr th, tbody tr td { padding: 8px; line-height: 142%; vertical-align: top; }

/*Layout*/
#pre-header { top: 0; left: 0; width: 100%; z-index: 13; position: absolute; background-color: #333; }

.logged-in #pre-header { padding-top: 64px; }

#pre-header-inside { display: none; position: relative; z-index: 13; padding: 40px 0 0 0; }

#header-top { background-color: #fcfcfc; border-bottom: 1px dashed #eaeaea; position: relative; z-index: 12; min-height: 50px; } 

/* header */

#header { 
    margin: 0 auto;
	padding:30px 0 0;
	/*z-index: 1000;*/
	width: 100%;
	position: relative;
}

#header div.social {
    margin: 0;
    position: absolute;
    right: 10px;
    top: 10px;
}

#header div.social ul.social{
    list-style: none;
}

#header div.social ul.social li{
    list-style: none;
    padding: 0 0 0 5px;
    float: left;
    font-size: 14px;
    color: #6B6B6B;
}

#header div.social ul.social li a{
    float: left;
    width: 36px;
    height: 36px;
    margin-top: 0px;
    background: url(../images/local/social.png) no-repeat;
    text-indent: -999em;
    opacity: 0.5;
}

#header div.social ul.social li a:hover {
    opacity: 0.9;
}

#header div.social ul.social li a.twitter {
    background-position: 0px 0;
}
#header div.social ul.social li a.facebook {
    background-position: -61px 0;
}
#header div.social ul.social li a.gplus {
    background-position: -121px 0;
}
#header div.social ul.social li a.youtube {
    background-position: -177px 0;
}
#header div.social ul.social li a.rss {
    background-position: -242px 0;
}
#header div.social ul.social li a.skype {
    background-position: -304px 0;
}

/* header-banner-wrapper */


#header-banner-wrapper {    
    background: url(../images/local/sunrise_background1.jpg) no-repeat center center fixed #333;
    background-attachment: fixed;
    min-height: 193px;
    overflow-x:hidden;
    
    -webkit-background-size: cover; /* For WebKit*/
    -moz-background-size: cover;    /* Mozilla*/
    -o-background-size: cover;      /* Opera*/
    background-size: cover;         /* Generic*/
}

body.html.front #header-banner-wrapper {
    height:100vh;
}

#header-banner-wrapper div.slogan {
    min-width: 768px;
    max-width: 991px;
    background: url(../images/local/bg_slogan.png) top left repeat;
    -webkit-border-radius: 10px;
    -moz-border-radius: 10px;
    border-radius: 10px;
    color: #fff;
    padding: 30px;
    margin: 0 auto;
    text-align: center;
    margin: 11% auto 11%;
}

#header-banner-wrapper div.slogan  h2 {
	font-size: 60px;
	font-weight: 900;
	margin-bottom: 25px;
    color:#fff;
}

#header-banner-wrapper div.slogan p {
	font-size: 34px;
	font-weight: 100;
}

/* Navigation */

.sf-menu li {
    float: none;
    list-style: none;
}

#main-navigation { 
    background: url(../images/local/bg_nav.png) top left repeat;
    padding: 3px 0;
    margin-top: 20px;
}

#main-navigation-inside {
    border-top: 1px dashed #999;
    border-bottom: 1px dashed #999;
    margin: 0 auto;
    padding: 0;
    line-height: 36px;
    text-align: center;
}

#main-navigation-inside ul.menu  {
	display: inline-block;
}
/* ... */

